[package]
name = "serde_x12_alt"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Serde support for X12 EDI"
homepage = "https://github.com/kurtbuilds/x12"
repository = "https://github.com/kurtbuilds/x12"
documentation = "https://docs.rs/serde_x12_alt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "serde_x12"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
colored = "2.1.0"
tracing = { version = "0.1.40" , optional = true }

[dev-dependencies]
x12_alt = { path = "../x12", features = ["5010"] }