[package]
name = "x12_alt"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Data types for X12 EDI"
homepage = "https://github.com/kurtbuilds/x12"
repository = "https://github.com/kurtbuilds/x12"
documentation = "https://docs.rs/serde_x12_alt"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "x12"
path = "src/lib.rs"

[features]
8010 = []
5010 = []
hipaa = ["5010"]

[dependencies]
serde = { version = "1.0.196" , features = ["derive"] }